# fastapi-ecs-demo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/static/: app.js  index.html  style.css
terraform/: alb.tf  ecr.tf  ecs.tf  iam_oidc.tf  network.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: test_main.py
